// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`waterfall_helpers getWaterfall should return full waterfall 1`] = `
Object {
  "duration": 49660,
  "entryTransaction": Object {
    "processor": Object {
      "event": "transaction",
    },
    "service": Object {
      "name": "opbeans-node",
    },
    "timestamp": Object {
      "us": 1549324795784006,
    },
    "trace": Object {
      "id": "myTraceId",
    },
    "transaction": Object {
      "duration": Object {
        "us": 49660,
      },
      "id": "myTransactionId1",
      "name": "GET /api",
    },
  },
  "errorItems": Array [
    Object {
      "doc": Object {
        "agent": Object {
          "name": "ruby",
          "version": "2",
        },
        "error": Object {
          "grouping_key": "errorGroupingKey1",
          "id": "error1",
          "log": Object {
            "message": "error message",
          },
        },
        "parent": Object {
          "id": "myTransactionId1",
        },
        "processor": Object {
          "event": "error",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "timestamp": Object {
          "us": 1549324795810000,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "id": "myTransactionId1",
        },
      },
      "docType": "error",
      "duration": 0,
      "id": "error1",
      "offset": 25994,
      "parent": Object {
        "doc": Object {
          "processor": Object {
            "event": "transaction",
          },
          "service": Object {
            "name": "opbeans-node",
          },
          "timestamp": Object {
            "us": 1549324795784006,
          },
          "trace": Object {
            "id": "myTraceId",
          },
          "transaction": Object {
            "duration": Object {
              "us": 49660,
            },
            "id": "myTransactionId1",
            "name": "GET /api",
          },
        },
        "docType": "transaction",
        "duration": 49660,
        "id": "myTransactionId1",
        "offset": 0,
        "parent": undefined,
        "parentId": undefined,
        "skew": 0,
      },
      "parentId": "myTransactionId1",
      "skew": 0,
    },
  ],
  "errorsCount": 1,
  "errorsPerTransaction": Object {
    "myTransactionId1": 2,
    "myTransactionId2": 3,
  },
  "items": Array [
    Object {
      "doc": Object {
        "processor": Object {
          "event": "transaction",
        },
        "service": Object {
          "name": "opbeans-node",
        },
        "timestamp": Object {
          "us": 1549324795784006,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "duration": Object {
            "us": 49660,
          },
          "id": "myTransactionId1",
          "name": "GET /api",
        },
      },
      "docType": "transaction",
      "duration": 49660,
      "id": "myTransactionId1",
      "offset": 0,
      "parent": undefined,
      "parentId": undefined,
      "skew": 0,
    },
    Object {
      "doc": Object {
        "parent": Object {
          "id": "myTransactionId1",
        },
        "processor": Object {
          "event": "span",
        },
        "service": Object {
          "name": "opbeans-node",
        },
        "span": Object {
          "duration": Object {
            "us": 47557,
          },
          "id": "mySpanIdD",
          "name": "GET opbeans-ruby:3000/api/products",
        },
        "timestamp": Object {
          "us": 1549324795785760,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "id": "myTransactionId1",
        },
      },
      "docType": "span",
      "duration": 47557,
      "id": "mySpanIdD",
      "offset": 1754,
      "parent": Object {
        "doc": Object {
          "processor": Object {
            "event": "transaction",
          },
          "service": Object {
            "name": "opbeans-node",
          },
          "timestamp": Object {
            "us": 1549324795784006,
          },
          "trace": Object {
            "id": "myTraceId",
          },
          "transaction": Object {
            "duration": Object {
              "us": 49660,
            },
            "id": "myTransactionId1",
            "name": "GET /api",
          },
        },
        "docType": "transaction",
        "duration": 49660,
        "id": "myTransactionId1",
        "offset": 0,
        "parent": undefined,
        "parentId": undefined,
        "skew": 0,
      },
      "parentId": "myTransactionId1",
      "skew": 0,
    },
    Object {
      "doc": Object {
        "parent": Object {
          "id": "mySpanIdD",
        },
        "processor": Object {
          "event": "transaction",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "timestamp": Object {
          "us": 1549324795823304,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "duration": Object {
            "us": 8634,
          },
          "id": "myTransactionId2",
          "marks": Object {
            "agent": Object {
              "domComplete": 383,
              "domInteractive": 382,
              "timeToFirstByte": 14,
            },
          },
          "name": "Api::ProductsController#index",
        },
      },
      "docType": "transaction",
      "duration": 8634,
      "id": "myTransactionId2",
      "offset": 39298,
      "parent": Object {
        "doc": Object {
          "parent": Object {
            "id": "myTransactionId1",
          },
          "processor": Object {
            "event": "span",
          },
          "service": Object {
            "name": "opbeans-node",
          },
          "span": Object {
            "duration": Object {
              "us": 47557,
            },
            "id": "mySpanIdD",
            "name": "GET opbeans-ruby:3000/api/products",
          },
          "timestamp": Object {
            "us": 1549324795785760,
          },
          "trace": Object {
            "id": "myTraceId",
          },
          "transaction": Object {
            "id": "myTransactionId1",
          },
        },
        "docType": "span",
        "duration": 47557,
        "id": "mySpanIdD",
        "offset": 1754,
        "parent": Object {
          "doc": Object {
            "processor": Object {
              "event": "transaction",
            },
            "service": Object {
              "name": "opbeans-node",
            },
            "timestamp": Object {
              "us": 1549324795784006,
            },
            "trace": Object {
              "id": "myTraceId",
            },
            "transaction": Object {
              "duration": Object {
                "us": 49660,
              },
              "id": "myTransactionId1",
              "name": "GET /api",
            },
          },
          "docType": "transaction",
          "duration": 49660,
          "id": "myTransactionId1",
          "offset": 0,
          "parent": undefined,
          "parentId": undefined,
          "skew": 0,
        },
        "parentId": "myTransactionId1",
        "skew": 0,
      },
      "parentId": "mySpanIdD",
      "skew": 0,
    },
    Object {
      "doc": Object {
        "parent": Object {
          "id": "myTransactionId2",
        },
        "processor": Object {
          "event": "span",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "span": Object {
          "duration": Object {
            "us": 6161,
          },
          "id": "mySpanIdA",
          "name": "Api::ProductsController#index",
        },
        "timestamp": Object {
          "us": 1549324795824504,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "id": "myTransactionId2",
        },
      },
      "docType": "span",
      "duration": 6161,
      "id": "mySpanIdA",
      "offset": 40498,
      "parent": Object {
        "doc": Object {
          "parent": Object {
            "id": "mySpanIdD",
          },
          "processor": Object {
            "event": "transaction",
          },
          "service": Object {
            "name": "opbeans-ruby",
          },
          "timestamp": Object {
            "us": 1549324795823304,
          },
          "trace": Object {
            "id": "myTraceId",
          },
          "transaction": Object {
            "duration": Object {
              "us": 8634,
            },
            "id": "myTransactionId2",
            "marks": Object {
              "agent": Object {
                "domComplete": 383,
                "domInteractive": 382,
                "timeToFirstByte": 14,
              },
            },
            "name": "Api::ProductsController#index",
          },
        },
        "docType": "transaction",
        "duration": 8634,
        "id": "myTransactionId2",
        "offset": 39298,
        "parent": Object {
          "doc": Object {
            "parent": Object {
              "id": "myTransactionId1",
            },
            "processor": Object {
              "event": "span",
            },
            "service": Object {
              "name": "opbeans-node",
            },
            "span": Object {
              "duration": Object {
                "us": 47557,
              },
              "id": "mySpanIdD",
              "name": "GET opbeans-ruby:3000/api/products",
            },
            "timestamp": Object {
              "us": 1549324795785760,
            },
            "trace": Object {
              "id": "myTraceId",
            },
            "transaction": Object {
              "id": "myTransactionId1",
            },
          },
          "docType": "span",
          "duration": 47557,
          "id": "mySpanIdD",
          "offset": 1754,
          "parent": Object {
            "doc": Object {
              "processor": Object {
                "event": "transaction",
              },
              "service": Object {
                "name": "opbeans-node",
              },
              "timestamp": Object {
                "us": 1549324795784006,
              },
              "trace": Object {
                "id": "myTraceId",
              },
              "transaction": Object {
                "duration": Object {
                  "us": 49660,
                },
                "id": "myTransactionId1",
                "name": "GET /api",
              },
            },
            "docType": "transaction",
            "duration": 49660,
            "id": "myTransactionId1",
            "offset": 0,
            "parent": undefined,
            "parentId": undefined,
            "skew": 0,
          },
          "parentId": "myTransactionId1",
          "skew": 0,
        },
        "parentId": "mySpanIdD",
        "skew": 0,
      },
      "parentId": "myTransactionId2",
      "skew": 0,
    },
    Object {
      "doc": Object {
        "parent": Object {
          "id": "mySpanIdA",
        },
        "processor": Object {
          "event": "span",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "span": Object {
          "duration": Object {
            "us": 481,
          },
          "id": "mySpanIdB",
          "name": "SELECT FROM products",
        },
        "timestamp": Object {
          "us": 1549324795825633,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "id": "myTransactionId2",
        },
      },
      "docType": "span",
      "duration": 481,
      "id": "mySpanIdB",
      "offset": 41627,
      "parent": Object {
        "doc": Object {
          "parent": Object {
            "id": "myTransactionId2",
          },
          "processor": Object {
            "event": "span",
          },
          "service": Object {
            "name": "opbeans-ruby",
          },
          "span": Object {
            "duration": Object {
              "us": 6161,
            },
            "id": "mySpanIdA",
            "name": "Api::ProductsController#index",
          },
          "timestamp": Object {
            "us": 1549324795824504,
          },
          "trace": Object {
            "id": "myTraceId",
          },
          "transaction": Object {
            "id": "myTransactionId2",
          },
        },
        "docType": "span",
        "duration": 6161,
        "id": "mySpanIdA",
        "offset": 40498,
        "parent": Object {
          "doc": Object {
            "parent": Object {
              "id": "mySpanIdD",
            },
            "processor": Object {
              "event": "transaction",
            },
            "service": Object {
              "name": "opbeans-ruby",
            },
            "timestamp": Object {
              "us": 1549324795823304,
            },
            "trace": Object {
              "id": "myTraceId",
            },
            "transaction": Object {
              "duration": Object {
                "us": 8634,
              },
              "id": "myTransactionId2",
              "marks": Object {
                "agent": Object {
                  "domComplete": 383,
                  "domInteractive": 382,
                  "timeToFirstByte": 14,
                },
              },
              "name": "Api::ProductsController#index",
            },
          },
          "docType": "transaction",
          "duration": 8634,
          "id": "myTransactionId2",
          "offset": 39298,
          "parent": Object {
            "doc": Object {
              "parent": Object {
                "id": "myTransactionId1",
              },
              "processor": Object {
                "event": "span",
              },
              "service": Object {
                "name": "opbeans-node",
              },
              "span": Object {
                "duration": Object {
                  "us": 47557,
                },
                "id": "mySpanIdD",
                "name": "GET opbeans-ruby:3000/api/products",
              },
              "timestamp": Object {
                "us": 1549324795785760,
              },
              "trace": Object {
                "id": "myTraceId",
              },
              "transaction": Object {
                "id": "myTransactionId1",
              },
            },
            "docType": "span",
            "duration": 47557,
            "id": "mySpanIdD",
            "offset": 1754,
            "parent": Object {
              "doc": Object {
                "processor": Object {
                  "event": "transaction",
                },
                "service": Object {
                  "name": "opbeans-node",
                },
                "timestamp": Object {
                  "us": 1549324795784006,
                },
                "trace": Object {
                  "id": "myTraceId",
                },
                "transaction": Object {
                  "duration": Object {
                    "us": 49660,
                  },
                  "id": "myTransactionId1",
                  "name": "GET /api",
                },
              },
              "docType": "transaction",
              "duration": 49660,
              "id": "myTransactionId1",
              "offset": 0,
              "parent": undefined,
              "parentId": undefined,
              "skew": 0,
            },
            "parentId": "myTransactionId1",
            "skew": 0,
          },
          "parentId": "mySpanIdD",
          "skew": 0,
        },
        "parentId": "myTransactionId2",
        "skew": 0,
      },
      "parentId": "mySpanIdA",
      "skew": 0,
    },
    Object {
      "doc": Object {
        "parent": Object {
          "id": "mySpanIdA",
        },
        "processor": Object {
          "event": "span",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "span": Object {
          "duration": Object {
            "us": 532,
          },
          "id": "mySpanIdC",
          "name": "SELECT FROM product",
        },
        "timestamp": Object {
          "us": 1549324795827905,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "id": "myTransactionId2",
        },
      },
      "docType": "span",
      "duration": 532,
      "id": "mySpanIdC",
      "offset": 43899,
      "parent": Object {
        "doc": Object {
          "parent": Object {
            "id": "myTransactionId2",
          },
          "processor": Object {
            "event": "span",
          },
          "service": Object {
            "name": "opbeans-ruby",
          },
          "span": Object {
            "duration": Object {
              "us": 6161,
            },
            "id": "mySpanIdA",
            "name": "Api::ProductsController#index",
          },
          "timestamp": Object {
            "us": 1549324795824504,
          },
          "trace": Object {
            "id": "myTraceId",
          },
          "transaction": Object {
            "id": "myTransactionId2",
          },
        },
        "docType": "span",
        "duration": 6161,
        "id": "mySpanIdA",
        "offset": 40498,
        "parent": Object {
          "doc": Object {
            "parent": Object {
              "id": "mySpanIdD",
            },
            "processor": Object {
              "event": "transaction",
            },
            "service": Object {
              "name": "opbeans-ruby",
            },
            "timestamp": Object {
              "us": 1549324795823304,
            },
            "trace": Object {
              "id": "myTraceId",
            },
            "transaction": Object {
              "duration": Object {
                "us": 8634,
              },
              "id": "myTransactionId2",
              "marks": Object {
                "agent": Object {
                  "domComplete": 383,
                  "domInteractive": 382,
                  "timeToFirstByte": 14,
                },
              },
              "name": "Api::ProductsController#index",
            },
          },
          "docType": "transaction",
          "duration": 8634,
          "id": "myTransactionId2",
          "offset": 39298,
          "parent": Object {
            "doc": Object {
              "parent": Object {
                "id": "myTransactionId1",
              },
              "processor": Object {
                "event": "span",
              },
              "service": Object {
                "name": "opbeans-node",
              },
              "span": Object {
                "duration": Object {
                  "us": 47557,
                },
                "id": "mySpanIdD",
                "name": "GET opbeans-ruby:3000/api/products",
              },
              "timestamp": Object {
                "us": 1549324795785760,
              },
              "trace": Object {
                "id": "myTraceId",
              },
              "transaction": Object {
                "id": "myTransactionId1",
              },
            },
            "docType": "span",
            "duration": 47557,
            "id": "mySpanIdD",
            "offset": 1754,
            "parent": Object {
              "doc": Object {
                "processor": Object {
                  "event": "transaction",
                },
                "service": Object {
                  "name": "opbeans-node",
                },
                "timestamp": Object {
                  "us": 1549324795784006,
                },
                "trace": Object {
                  "id": "myTraceId",
                },
                "transaction": Object {
                  "duration": Object {
                    "us": 49660,
                  },
                  "id": "myTransactionId1",
                  "name": "GET /api",
                },
              },
              "docType": "transaction",
              "duration": 49660,
              "id": "myTransactionId1",
              "offset": 0,
              "parent": undefined,
              "parentId": undefined,
              "skew": 0,
            },
            "parentId": "myTransactionId1",
            "skew": 0,
          },
          "parentId": "mySpanIdD",
          "skew": 0,
        },
        "parentId": "myTransactionId2",
        "skew": 0,
      },
      "parentId": "mySpanIdA",
      "skew": 0,
    },
  ],
  "rootTransaction": Object {
    "processor": Object {
      "event": "transaction",
    },
    "service": Object {
      "name": "opbeans-node",
    },
    "timestamp": Object {
      "us": 1549324795784006,
    },
    "trace": Object {
      "id": "myTraceId",
    },
    "transaction": Object {
      "duration": Object {
        "us": 49660,
      },
      "id": "myTransactionId1",
      "name": "GET /api",
    },
  },
  "serviceColors": Object {
    "opbeans-node": "#6092c0",
    "opbeans-ruby": "#54b399",
  },
}
`;

exports[`waterfall_helpers getWaterfall should return partial waterfall 1`] = `
Object {
  "duration": 8634,
  "entryTransaction": Object {
    "parent": Object {
      "id": "mySpanIdD",
    },
    "processor": Object {
      "event": "transaction",
    },
    "service": Object {
      "name": "opbeans-ruby",
    },
    "timestamp": Object {
      "us": 1549324795823304,
    },
    "trace": Object {
      "id": "myTraceId",
    },
    "transaction": Object {
      "duration": Object {
        "us": 8634,
      },
      "id": "myTransactionId2",
      "marks": Object {
        "agent": Object {
          "domComplete": 383,
          "domInteractive": 382,
          "timeToFirstByte": 14,
        },
      },
      "name": "Api::ProductsController#index",
    },
  },
  "errorItems": Array [],
  "errorsCount": 0,
  "errorsPerTransaction": Object {
    "myTransactionId1": 2,
    "myTransactionId2": 3,
  },
  "items": Array [
    Object {
      "doc": Object {
        "parent": Object {
          "id": "mySpanIdD",
        },
        "processor": Object {
          "event": "transaction",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "timestamp": Object {
          "us": 1549324795823304,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "duration": Object {
            "us": 8634,
          },
          "id": "myTransactionId2",
          "marks": Object {
            "agent": Object {
              "domComplete": 383,
              "domInteractive": 382,
              "timeToFirstByte": 14,
            },
          },
          "name": "Api::ProductsController#index",
        },
      },
      "docType": "transaction",
      "duration": 8634,
      "id": "myTransactionId2",
      "offset": 0,
      "parent": undefined,
      "parentId": "mySpanIdD",
      "skew": 0,
    },
    Object {
      "doc": Object {
        "parent": Object {
          "id": "myTransactionId2",
        },
        "processor": Object {
          "event": "span",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "span": Object {
          "duration": Object {
            "us": 6161,
          },
          "id": "mySpanIdA",
          "name": "Api::ProductsController#index",
        },
        "timestamp": Object {
          "us": 1549324795824504,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "id": "myTransactionId2",
        },
      },
      "docType": "span",
      "duration": 6161,
      "id": "mySpanIdA",
      "offset": 1200,
      "parent": Object {
        "doc": Object {
          "parent": Object {
            "id": "mySpanIdD",
          },
          "processor": Object {
            "event": "transaction",
          },
          "service": Object {
            "name": "opbeans-ruby",
          },
          "timestamp": Object {
            "us": 1549324795823304,
          },
          "trace": Object {
            "id": "myTraceId",
          },
          "transaction": Object {
            "duration": Object {
              "us": 8634,
            },
            "id": "myTransactionId2",
            "marks": Object {
              "agent": Object {
                "domComplete": 383,
                "domInteractive": 382,
                "timeToFirstByte": 14,
              },
            },
            "name": "Api::ProductsController#index",
          },
        },
        "docType": "transaction",
        "duration": 8634,
        "id": "myTransactionId2",
        "offset": 0,
        "parent": undefined,
        "parentId": "mySpanIdD",
        "skew": 0,
      },
      "parentId": "myTransactionId2",
      "skew": 0,
    },
    Object {
      "doc": Object {
        "parent": Object {
          "id": "mySpanIdA",
        },
        "processor": Object {
          "event": "span",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "span": Object {
          "duration": Object {
            "us": 481,
          },
          "id": "mySpanIdB",
          "name": "SELECT FROM products",
        },
        "timestamp": Object {
          "us": 1549324795825633,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "id": "myTransactionId2",
        },
      },
      "docType": "span",
      "duration": 481,
      "id": "mySpanIdB",
      "offset": 2329,
      "parent": Object {
        "doc": Object {
          "parent": Object {
            "id": "myTransactionId2",
          },
          "processor": Object {
            "event": "span",
          },
          "service": Object {
            "name": "opbeans-ruby",
          },
          "span": Object {
            "duration": Object {
              "us": 6161,
            },
            "id": "mySpanIdA",
            "name": "Api::ProductsController#index",
          },
          "timestamp": Object {
            "us": 1549324795824504,
          },
          "trace": Object {
            "id": "myTraceId",
          },
          "transaction": Object {
            "id": "myTransactionId2",
          },
        },
        "docType": "span",
        "duration": 6161,
        "id": "mySpanIdA",
        "offset": 1200,
        "parent": Object {
          "doc": Object {
            "parent": Object {
              "id": "mySpanIdD",
            },
            "processor": Object {
              "event": "transaction",
            },
            "service": Object {
              "name": "opbeans-ruby",
            },
            "timestamp": Object {
              "us": 1549324795823304,
            },
            "trace": Object {
              "id": "myTraceId",
            },
            "transaction": Object {
              "duration": Object {
                "us": 8634,
              },
              "id": "myTransactionId2",
              "marks": Object {
                "agent": Object {
                  "domComplete": 383,
                  "domInteractive": 382,
                  "timeToFirstByte": 14,
                },
              },
              "name": "Api::ProductsController#index",
            },
          },
          "docType": "transaction",
          "duration": 8634,
          "id": "myTransactionId2",
          "offset": 0,
          "parent": undefined,
          "parentId": "mySpanIdD",
          "skew": 0,
        },
        "parentId": "myTransactionId2",
        "skew": 0,
      },
      "parentId": "mySpanIdA",
      "skew": 0,
    },
    Object {
      "doc": Object {
        "parent": Object {
          "id": "mySpanIdA",
        },
        "processor": Object {
          "event": "span",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "span": Object {
          "duration": Object {
            "us": 532,
          },
          "id": "mySpanIdC",
          "name": "SELECT FROM product",
        },
        "timestamp": Object {
          "us": 1549324795827905,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "id": "myTransactionId2",
        },
      },
      "docType": "span",
      "duration": 532,
      "id": "mySpanIdC",
      "offset": 4601,
      "parent": Object {
        "doc": Object {
          "parent": Object {
            "id": "myTransactionId2",
          },
          "processor": Object {
            "event": "span",
          },
          "service": Object {
            "name": "opbeans-ruby",
          },
          "span": Object {
            "duration": Object {
              "us": 6161,
            },
            "id": "mySpanIdA",
            "name": "Api::ProductsController#index",
          },
          "timestamp": Object {
            "us": 1549324795824504,
          },
          "trace": Object {
            "id": "myTraceId",
          },
          "transaction": Object {
            "id": "myTransactionId2",
          },
        },
        "docType": "span",
        "duration": 6161,
        "id": "mySpanIdA",
        "offset": 1200,
        "parent": Object {
          "doc": Object {
            "parent": Object {
              "id": "mySpanIdD",
            },
            "processor": Object {
              "event": "transaction",
            },
            "service": Object {
              "name": "opbeans-ruby",
            },
            "timestamp": Object {
              "us": 1549324795823304,
            },
            "trace": Object {
              "id": "myTraceId",
            },
            "transaction": Object {
              "duration": Object {
                "us": 8634,
              },
              "id": "myTransactionId2",
              "marks": Object {
                "agent": Object {
                  "domComplete": 383,
                  "domInteractive": 382,
                  "timeToFirstByte": 14,
                },
              },
              "name": "Api::ProductsController#index",
            },
          },
          "docType": "transaction",
          "duration": 8634,
          "id": "myTransactionId2",
          "offset": 0,
          "parent": undefined,
          "parentId": "mySpanIdD",
          "skew": 0,
        },
        "parentId": "myTransactionId2",
        "skew": 0,
      },
      "parentId": "mySpanIdA",
      "skew": 0,
    },
  ],
  "rootTransaction": Object {
    "processor": Object {
      "event": "transaction",
    },
    "service": Object {
      "name": "opbeans-node",
    },
    "timestamp": Object {
      "us": 1549324795784006,
    },
    "trace": Object {
      "id": "myTraceId",
    },
    "transaction": Object {
      "duration": Object {
        "us": 49660,
      },
      "id": "myTransactionId1",
      "name": "GET /api",
    },
  },
  "serviceColors": Object {
    "opbeans-ruby": "#6092c0",
  },
}
`;

exports[`waterfall_helpers getWaterfallItems should handle cyclic references 1`] = `
Array [
  Object {
    "doc": Object {
      "timestamp": Object {
        "us": 10,
      },
      "transaction": Object {
        "id": "a",
      },
    },
    "docType": "transaction",
    "id": "a",
    "offset": 0,
    "parent": undefined,
    "skew": 0,
  },
  Object {
    "doc": Object {
      "parent": Object {
        "id": "a",
      },
      "span": Object {
        "id": "b",
      },
      "timestamp": Object {
        "us": 20,
      },
    },
    "docType": "span",
    "id": "b",
    "offset": 10,
    "parent": Object {
      "doc": Object {
        "timestamp": Object {
          "us": 10,
        },
        "transaction": Object {
          "id": "a",
        },
      },
      "docType": "transaction",
      "id": "a",
      "offset": 0,
      "parent": undefined,
      "skew": 0,
    },
    "parentId": "a",
    "skew": 0,
  },
]
`;

exports[`waterfall_helpers getWaterfallItems should order items correctly 1`] = `
Array [
  Object {
    "doc": Object {
      "service": Object {
        "name": "opbeans-java",
      },
      "timestamp": Object {
        "us": 1536763736366000,
      },
      "transaction": Object {
        "id": "a",
        "name": "APIRestController#products",
      },
    },
    "docType": "transaction",
    "duration": 9480,
    "id": "a",
    "offset": 0,
    "parent": undefined,
    "skew": 0,
  },
  Object {
    "doc": Object {
      "parent": Object {
        "id": "a",
      },
      "service": Object {
        "name": "opbeans-java",
      },
      "span": Object {
        "id": "b2",
        "name": "GET [0:0:0:0:0:0:0:1]",
      },
      "timestamp": Object {
        "us": 1536763736367000,
      },
      "transaction": Object {
        "id": "a",
      },
    },
    "docType": "span",
    "duration": 4694,
    "id": "b2",
    "offset": 1000,
    "parent": Object {
      "doc": Object {
        "service": Object {
          "name": "opbeans-java",
        },
        "timestamp": Object {
          "us": 1536763736366000,
        },
        "transaction": Object {
          "id": "a",
          "name": "APIRestController#products",
        },
      },
      "docType": "transaction",
      "duration": 9480,
      "id": "a",
      "offset": 0,
      "parent": undefined,
      "skew": 0,
    },
    "parentId": "a",
    "skew": 0,
  },
  Object {
    "doc": Object {
      "parent": Object {
        "id": "a",
      },
      "service": Object {
        "name": "opbeans-java",
      },
      "span": Object {
        "id": "b",
        "name": "GET [0:0:0:0:0:0:0:1]",
      },
      "timestamp": Object {
        "us": 1536763736368000,
      },
      "transaction": Object {
        "id": "a",
      },
    },
    "docType": "span",
    "duration": 4694,
    "id": "b",
    "offset": 2000,
    "parent": Object {
      "doc": Object {
        "service": Object {
          "name": "opbeans-java",
        },
        "timestamp": Object {
          "us": 1536763736366000,
        },
        "transaction": Object {
          "id": "a",
          "name": "APIRestController#products",
        },
      },
      "docType": "transaction",
      "duration": 9480,
      "id": "a",
      "offset": 0,
      "parent": undefined,
      "skew": 0,
    },
    "parentId": "a",
    "skew": 0,
  },
  Object {
    "doc": Object {
      "parent": Object {
        "id": "b",
      },
      "service": Object {
        "name": "opbeans-java",
      },
      "timestamp": Object {
        "us": 1536763736369000,
      },
      "transaction": Object {
        "id": "c",
        "name": "APIRestController#productsRemote",
      },
    },
    "docType": "transaction",
    "duration": 3581,
    "id": "c",
    "offset": 3000,
    "parent": Object {
      "doc": Object {
        "parent": Object {
          "id": "a",
        },
        "service": Object {
          "name": "opbeans-java",
        },
        "span": Object {
          "id": "b",
          "name": "GET [0:0:0:0:0:0:0:1]",
        },
        "timestamp": Object {
          "us": 1536763736368000,
        },
        "transaction": Object {
          "id": "a",
        },
      },
      "docType": "span",
      "duration": 4694,
      "id": "b",
      "offset": 2000,
      "parent": Object {
        "doc": Object {
          "service": Object {
            "name": "opbeans-java",
          },
          "timestamp": Object {
            "us": 1536763736366000,
          },
          "transaction": Object {
            "id": "a",
            "name": "APIRestController#products",
          },
        },
        "docType": "transaction",
        "duration": 9480,
        "id": "a",
        "offset": 0,
        "parent": undefined,
        "skew": 0,
      },
      "parentId": "a",
      "skew": 0,
    },
    "parentId": "b",
    "skew": 0,
  },
  Object {
    "doc": Object {
      "parent": Object {
        "id": "c",
      },
      "service": Object {
        "name": "opbeans-java",
      },
      "span": Object {
        "id": "d",
        "name": "SELECT",
      },
      "timestamp": Object {
        "us": 1536763736371000,
      },
      "transaction": Object {
        "id": "c",
      },
    },
    "docType": "span",
    "duration": 210,
    "id": "d",
    "offset": 5000,
    "parent": Object {
      "doc": Object {
        "parent": Object {
          "id": "b",
        },
        "service": Object {
          "name": "opbeans-java",
        },
        "timestamp": Object {
          "us": 1536763736369000,
        },
        "transaction": Object {
          "id": "c",
          "name": "APIRestController#productsRemote",
        },
      },
      "docType": "transaction",
      "duration": 3581,
      "id": "c",
      "offset": 3000,
      "parent": Object {
        "doc": Object {
          "parent": Object {
            "id": "a",
          },
          "service": Object {
            "name": "opbeans-java",
          },
          "span": Object {
            "id": "b",
            "name": "GET [0:0:0:0:0:0:0:1]",
          },
          "timestamp": Object {
            "us": 1536763736368000,
          },
          "transaction": Object {
            "id": "a",
          },
        },
        "docType": "span",
        "duration": 4694,
        "id": "b",
        "offset": 2000,
        "parent": Object {
          "doc": Object {
            "service": Object {
              "name": "opbeans-java",
            },
            "timestamp": Object {
              "us": 1536763736366000,
            },
            "transaction": Object {
              "id": "a",
              "name": "APIRestController#products",
            },
          },
          "docType": "transaction",
          "duration": 9480,
          "id": "a",
          "offset": 0,
          "parent": undefined,
          "skew": 0,
        },
        "parentId": "a",
        "skew": 0,
      },
      "parentId": "b",
      "skew": 0,
    },
    "parentId": "c",
    "skew": 0,
  },
]
`;
